fix uneven padding

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,7 +120,8 @@ body.night-mode{
 }
 
 a.navbar-item{
-	padding-right: 2px;
+	padding-right: 5px;
+	padding-left: 5px;
 }
 
 .night-mode {
